@@ -9,6 +9,7 @@ Post-v2.13.0
    - DPDK:
      * Deprecated DPDK pdump packet capture support removed.
      * Deprecated DPDK ring ports (dpdkr) are no longer supported.
+     * Add hardware offload support for matching IPv6 protocol.
    - Linux datapath:
      * Support for kernel versions up to 5.5.x.
    - AF_XDP:
